finish CRUD api doc
